--- a/index.html
+++ b/index.html
@@ -371,6 +371,8 @@
           top: 10%;
           display: flex;
           flex-direction: column;
+          justify-content: flex-start;
+          gap: 10px;
         }
 
         .our-work .content-container-child .content-heading {
@@ -380,7 +382,7 @@
           line-height: 58px;
           text-transform: uppercase;
           color: #232826;
-          margin-bottom: 20px;
+          /* margin-bottom: 20px; */
         }
         .content-container-child .content-heading h3 {
           transform: translateY(0%);
@@ -404,11 +406,12 @@
         .our-work .content-container-child .content-paragraph {
           width: 100%;
           font-weight: 700;
-          font-size: 24px;
-          line-height: 30px;
+          font-size: 30px;
+          line-height: 45px;
           color: #232826;
           max-width: 100%;
           opacity: 1 !important;
+          max-width: 900px;
         }
 
         @keyframes bounce {
@@ -435,21 +438,21 @@
         .our-work .img-container,
         .our-work .content-container-child {
           width: 100%;
-          height: 50vh !important;
+          /* height: 50vh !important; */
         }
 
         .our-work .content-container-child .content-heading h3 {
           font-weight: 700;
-          font-size: 25px;
+          font-size: 30px;
           line-height: 100%;
           letter-spacing: 0px;
+          max-width: 380px;
         }
 
         .our-work .content-container-child .content-paragraph {
           font-weight: 400;
-          font-size: 20px;
-          line-height: 25.47px;
-          letter-spacing: 0%;
+          font-size: 30px;
+          line-height: 36px;
           display: -webkit-box;
           -webkit-line-clamp: 6;
           -webkit-box-orient: vertical;
@@ -465,6 +468,40 @@
         }
         .card-container {
           display: none;
+        }
+      }
+      @media screen and (min-width: 500px) and (max-width: 60px) {
+        .our-work .content-container-child .content-paragraph {
+          font-weight: 400;
+          font-size: 22px;
+          line-height: 30px;
+          display: -webkit-box;
+          -webkit-line-clamp: 6;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+      }
+      @media screen and (max-width: 400px) {
+        .our-work .content-container-child {
+          width: 90%;
+          margin: 0px auto;
+          height: auto;
+          position: absolute;
+          top: 10%;
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-start;
+        }
+        .our-work .content-container-child .content-heading h3 {
+          font-size: 20px;
+        }
+        .our-work .content-container-child .content-paragraph {
+          font-size: 20px;
+          line-height: 30px;
+        }
+        .our-work .content-container-child .number-label {
+          font-size: 50px;
         }
       }
     </style>
@@ -583,14 +620,6 @@
                 <img src="./img/IMG1.png" alt="image" />
               </div>
 
-              <div class="card-container">
-                <div class="card-large-number">+2 m</div>
-                <div class="card-title">Donated money</div>
-                <div class="card-description">
-                  People Go to Bed Hungry Each Night Lorem ipsum
-                </div>
-              </div>
-
               <div class="content-container-child">
                 <div class="number-label">01</div>
                 <div class="content-heading">
@@ -609,14 +638,6 @@
             <div class="cardSlideChildren" id="our-work-2">
               <div class="img-container">
                 <img src="./img/IMG1.png" alt="image" />
-              </div>
-
-              <div class="card-container">
-                <div class="card-large-number">+2 m</div>
-                <div class="card-title">Donated money</div>
-                <div class="card-description">
-                  People Go to Bed Hungry Each Night Lorem ipsum
-                </div>
               </div>
 
               <div class="content-container-child">
@@ -639,14 +660,6 @@
                 <img src="./img/IMG1.png" alt="image" />
               </div>
 
-              <div class="card-container">
-                <div class="card-large-number">+2 m</div>
-                <div class="card-title">Donated money</div>
-                <div class="card-description">
-                  People Go to Bed Hungry Each Night Lorem ipsum
-                </div>
-              </div>
-
               <div class="content-container-child">
                 <div class="number-label">03</div>
                 <div class="content-heading">
@@ -667,14 +680,6 @@
                 <img src="./img/IMG2.png" alt="image" />
               </div>
 
-              <div class="card-container">
-                <div class="card-large-number">+2 m</div>
-                <div class="card-title">Donated money</div>
-                <div class="card-description">
-                  People Go to Bed Hungry Each Night Lorem ipsum
-                </div>
-              </div>
-
               <div class="content-container-child">
                 <div class="number-label">04</div>
                 <div class="content-heading">
@@ -693,14 +698,6 @@
             <div class="cardSlideChildren" id="our-work-5">
               <div class="img-container">
                 <img src="./img/IMG3.png" alt="image" />
-              </div>
-
-              <div class="card-container">
-                <div class="card-large-number">+2 m</div>
-                <div class="card-title">Donated money</div>
-                <div class="card-description">
-                  People Go to Bed Hungry Each Night Lorem ipsum
-                </div>
               </div>
 
               <div class="content-container-child">
@@ -936,7 +933,6 @@
         }
 
         // Mobile animations
-        // Mobile animations
         function setupMobileAnimations() {
           const container = document.querySelector(".our-work");
           const slides = gsap.utils.toArray(".cardSlideChildren");
@@ -969,7 +965,7 @@
               scrub: 0.5,
               snap: {
                 snapTo: 1 / (slides.length - 1),
-                duration: { min: 0.2, max: 0.5 }
+                duration: { min: 0.2, max: 1 }
               }
             }
           });
@@ -978,7 +974,7 @@
           slides.forEach((slide, i) => {
             if (i === 0) return; // Skip first slide as it's already visible
 
-            const position = i - 0.5;
+            const position = i - 0.8;
 
             // Image animation - slide up and fade in
             masterTimeline
@@ -987,7 +983,7 @@
                 {
                   y: -100,
                   opacity: 0,
-                  duration: 0.5
+                  duration: .8
                 },
                 position
               )
@@ -996,7 +992,7 @@
                 {
                   y: 0,
                   opacity: 1,
-                  duration: 0.5
+                  duration: .8
                 },
                 position
               );
@@ -1007,7 +1003,7 @@
                 contentContainers[i - 1],
                 {
                   opacity: 0,
-                  duration: 0.3
+                  duration: 0.6
                 },
                 position + 0.2
               ) // Slight delay after image starts moving
@@ -1015,7 +1011,7 @@
                 contentContainers[i],
                 {
                   opacity: 1,
-                  duration: 0.3
+                  duration: 0.6
                 },
                 position + 0.2
               );
