--- a/index.html
+++ b/index.html
@@ -294,9 +294,9 @@
         .our-work .img-container {
           position: absolute;
           width: 90%;
-          height: 50vh;
-          bottom: 0%;
-          margin-bottom: 30px;
+          height: 45vh;
+          bottom: 1%;
+          /* padding-bottom: 30px; */
           border-radius: 12px;
           overflow: hidden;
           will-change: transform, opacity;
@@ -470,7 +470,7 @@
           display: none;
         }
       }
-      @media screen and (min-width: 500px) and (max-width: 60px) {
+      @media screen and (min-width: 500px) and (max-width: 600px) {
         .our-work .content-container-child .content-paragraph {
           font-weight: 400;
           font-size: 22px;
@@ -482,7 +482,7 @@
           text-overflow: ellipsis;
         }
       }
-      @media screen and (max-width: 400px) {
+      @media screen and (min-width: 400px) and (max-width: 500px) {
         .our-work .content-container-child {
           width: 90%;
           margin: 0px auto;
@@ -497,8 +497,89 @@
           font-size: 20px;
         }
         .our-work .content-container-child .content-paragraph {
-          font-size: 20px;
+          font-size: 22px;
           line-height: 30px;
+        }
+        .our-work .content-container-child .number-label {
+          font-size: 50px;
+        }
+      }
+      @media screen and (min-width: 380px) and (max-width: 400px) {
+        .our-work .content-container-child {
+          width: 90%;
+          margin: 0px auto;
+          height: auto;
+          position: absolute;
+          top: 10%;
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-start;
+        }
+        .our-work .content-container-child .content-heading h3 {
+          font-size: 20px;
+        }
+        .our-work .content-container-child .content-paragraph {
+          font-size: 24px;
+          line-height: 30px;
+          display: -webkit-box;
+          -webkit-line-clamp: 7;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+        .our-work .content-container-child .number-label {
+          font-size: 50px;
+        }
+      }
+      @media screen and (min-width: 300px) and (max-width: 380px) {
+        .our-work .content-container-child {
+          width: 90%;
+          margin: 0px auto;
+          height: auto;
+          position: absolute;
+          top: 10%;
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-start;
+        }
+        .our-work .content-container-child .content-heading h3 {
+          font-size: 20px;
+        }
+        .our-work .content-container-child .content-paragraph {
+          font-size: 22px;
+          line-height: 30px;
+          display: -webkit-box;
+          -webkit-line-clamp: 4;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+        .our-work .content-container-child .number-label {
+          font-size: 50px;
+        }
+      }
+      @media screen and (max-width: 300px) {
+        .our-work .content-container-child {
+          width: 90%;
+          margin: 0px auto;
+          height: auto;
+          position: absolute;
+          top: 10%;
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-start;
+        }
+        .our-work .content-container-child .content-heading h3 {
+          font-size: 15px;
+        }
+        .our-work .content-container-child .content-paragraph {
+          font-size: 22px;
+          line-height: 30px;
+          display: -webkit-box;
+          -webkit-line-clamp: 5;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-overflow: ellipsis;
         }
         .our-work .content-container-child .number-label {
           font-size: 50px;
